<resources>
    <string name="app_name">Lupus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="application_icon">Application Icon</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="register">Register</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>