<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".RegisterFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/fragmentRegistrationEditTextName"
            android:text="@string/name" />

        <EditText
            android:id="@+id/fragmentRegistrationEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/fragmentRegistrationEditTextEmail"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/fragmentRegistrationEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/fragmentRegistrationEditTextPassword"
            android:text="@string/password" />

        <EditText
            android:id="@+id/fragmentRegistrationEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/fragmentRegistrationEditTextPasswordConfirmation"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/fragmentRegistrationEditTextPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/fragmentRegistrationButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
</layout>